--- a/CloudFormationTemplate.yaml
+++ b/CloudFormationTemplate.yaml
@@ -5,7 +5,20 @@ Description: |
   (EC2) Instance using AWS Cloudformation Service. 
   The design of Website created by Zuvay and deployment with Apache Web Server on AWS Elastic Compute Cloud (EC2)
   Instance using AWS Cloudformation Service is written by Feyzullah SARI.
-  
+
+Parameters:
+    InstanceType:
+      Description: WebServer EC2 instance Type. Please select instance type.
+      Type: String
+      Default: t2.micro
+      AllowedValues:
+        - t1.micro
+        - m1.small
+        - m1.medium
+        - m1.large
+        - c1.medium
+        - t2.micro
+
 Resources:
   WebServerSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
@@ -25,8 +38,7 @@ Resources:
   WebDesignInstance:
     Type: "AWS::EC2::Instance"
     Properties:
-      ImageId: ami-00a205cb8e06c3c4e
-      InstanceType: t2.micro
+      InstanceType: !Ref InstanceType
       KeyName: 20200824
       SecurityGroupIds:
         - !Ref WebServerSecurityGroup
@@ -77,12 +89,9 @@ Resources:
             wget https://github.com/datazuvay/24_statik_web_page_design_sass_flex_responsive/blob/master/images/logo_html.png
             wget https://github.com/datazuvay/24_statik_web_page_design_sass_flex_responsive/blob/master/images/showcase.jpg
 
-
-
-
-
+            chmod 777 /var/www/html/ -R
             systemctl start httpd
-            system enable httpd
+            systemctl enable httpd
 
   
 Outputs:
